EvView: fix caret-color when using system dark mode
Do not rely in GTK theme defaults for caret-color
but instead define it ourselves in shell/evince.css
where we also provide the ".inverted" variant.

Fixes #2093

--- a/shell/evince.css
+++ b/shell/evince.css
@@ -34,11 +34,13 @@ evview.find-results:active {
 
 evview.document-page {
     background-color: white;
+    caret-color: black;
     padding: 0;
 }
 
 evview.document-page.inverted {
     background-color: black;
+    caret-color: white;
 }
 
 evsidebarthumbnails.page-thumbnail {
